--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -52,12 +52,9 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn-rotate" href="javascript:void(0)">
-            <i class="nc-icon nc-settings-gear-65"></i>
-            <p>
-              <span class="d-lg-none d-md-block">Account</span>
-            </p>
-          </a>
+          <button class="btn btn-round" (click)="logout()">
+            Logout
+          </button>
         </li>
       </ul>
     </div>
