--- a/frontend/src/app/sidebar/sidebar.component.html
+++ b/frontend/src/app/sidebar/sidebar.component.html
@@ -11,11 +11,13 @@
     </a>
   </div>
     <ul class="nav">
-        <li *ngFor="let menuItem of menuItems" routerLinkActive="active" class="{{menuItem.class}}">
+      <div *ngFor="let menuItem of menuItems">
+        <li *ngIf="checkRole(menuItem)"  routerLinkActive="active" class="{{menuItem.class}}">
             <a [routerLink]="[menuItem.path]">
-                <i class="nc-icon {{menuItem.icon}}"></i>
+                <i class="{{menuItem.icon}}"></i>
                 <p>{{menuItem.title}}</p>
             </a>
         </li>
+      </div>
     </ul>
 </div>
