search recipes by name and error page added

--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -20,10 +20,12 @@
     <div class="collapse navbar-collapse justify-content-end" id="collapseExample" [ngbCollapse]="isCollapsed">
       <form>
         <div class="input-group no-border">
-          <input type="text" value="" class="form-control" placeholder="Search...">
+          <input type="text" [(ngModel)]="recipeName" name="recipeName" class="form-control" placeholder="Search...">
           <div class="input-group-append">
             <div class="input-group-text">
-              <i class="nc-icon nc-zoom-split"></i>
+              <button class = "btn btn-round btn-sm"  (click)="searchRecipes()">
+               <i class="nc-icon nc-zoom-split"></i>
+              </button>
             </div>
           </div>
         </div>
