--- a/frontend/src/app/components/recipes/main-recipes/main-recipes.component.html
+++ b/frontend/src/app/components/recipes/main-recipes/main-recipes.component.html
@@ -20,4 +20,7 @@
             </div>
         </div>
     </div>
+    <div *ngIf="count == 0" style="text-align: center;">
+        <h4 class="empty-list" >There are no recipes found.</h4>
+    </div>
 </div>
