best users report added

--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -23,9 +23,9 @@
           <input type="text" [(ngModel)]="recipeName" name="recipeName" class="form-control" placeholder="Search...">
           <div class="input-group-append">
             <div class="input-group-text">
-              <button class = "btn btn-round btn-sm"  (click)="searchRecipes()">
+              <a href = "#" (click)="searchRecipes()">
                <i class="nc-icon nc-zoom-split"></i>
-              </button>
+              </a>
             </div>
           </div>
         </div>
