--- a/frontend/src/app/components/recipes/prepare-recipe/prepare-recipe.component.html
+++ b/frontend/src/app/components/recipes/prepare-recipe/prepare-recipe.component.html
@@ -31,16 +31,29 @@
         <div class="col-md-6">
             <div class="card-body" style='height:100%; background-color: rgb(240, 240, 240); border-radius: 5px;'>
                 <p class="card-title"><b>Steps:</b></p>
-                <ul *ngFor="let step of recipe.steps">
-                    <li>{{step}}</li>
-                </ul>
+                <div style="margin-left: 2%;" *ngFor="let step of recipe.steps ; index as i">
+                    <div class="row" ><p> <strong>{{i+1}}.</strong> {{step}}</p></div>
+                    <div class="row" >
+                        <div class= "col-md-3"></div>
+                        <div class= "col-md-3">
+                            <button [disabled]= "i != count" class="btn btn-success btn-round" (click)="done(step, i+1)">
+                                <i class="fa fa-check" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div class= "col-md-3">
+                            <button [disabled]= "i != count" class="btn btn-danger btn-round" (click)="fail(step, i+1)">
+                                <i class="fa fa-times" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
-        <div *ngIf="!authService.isAdmin()" class="row">
+        <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6 text-center">
-              <button class="btn btn-round btn-success" (click)="prepareRecipe()">Prepare recipe</button>
+              <button class="btn btn-round btn-success"  [disabled]="stepsDone.length != recipe.steps.length" (click)="recipeDone()">Done</button>
             </div>
             <div class="col-md-3"></div>
           </div>
