--- a/frontend/src/app/components/recipes/main-recipes/main-recipes.component.html
+++ b/frontend/src/app/components/recipes/main-recipes/main-recipes.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="card-body">
                     <div>
-                        <img style='border-radius: 5px;' src="/assets/img/damir-bosnjak.jpg">
+                        <img style='border-radius: 5px;' [src]="recipe.imgURL">
                         <p><strong>Name:</strong> {{recipe?.name}}</p>
                         <p><b>Price:</b> {{recipe?.price}} </p>
                         <p><b>Time:</b> {{recipe?.time}} </p>
