--- a/frontend/src/app/components/recipes/recipe-details/recipe-details.component.html
+++ b/frontend/src/app/components/recipes/recipe-details/recipe-details.component.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="card" style='background-color: rgb(240, 240, 240);border-radius: 5px;'>
-                        <img style='border-radius: 5px;' src="/assets/img/damir-bosnjak.jpg">
+                        <img style='border-radius: 5px;' [src]="recipe.imgURL">
                     </div>
                 </div>
             </div>
