--- a/frontend/src/app/components/recipes/add-recipe/add-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-recipe/add-recipe.component.html
@@ -38,18 +38,22 @@
             <div class="form-group row">
               <label for="price" class="control-label col-md-3"><b>Price:</b></label>
               <div class="col-md-9">
-                <input type="number" class="form-control" id="price" name="price" placeholder="Price" formControlName="price">
+                <input type="number" min="0" class="form-control" id="price" name="price" placeholder="Price" formControlName="price">
                 <small class="text-danger"  *ngIf="formAddRecipe.controls.price.touched && formAddRecipe.controls.price.errors?.required">
                   This field can't be empty!</small>
+                <small class="text-danger"  *ngIf="formAddRecipe.controls.price.touched && formAddRecipe.controls.price.errors?.min">
+                  Price must be positive!</small>
               </div>
             </div>
 
             <div class="form-group row">
               <label for="userId" class="control-label col-md-3"><b>Time:</b></label>
               <div class="col-md-9">
-                <input type="number" class="form-control" id="time" name="time" placeholder="Preparation time" formControlName="time">
+                <input type="number" min="0" step="1" class="form-control" id="time" name="time" placeholder="Preparation time" formControlName="time">
                 <small class="text-danger"  *ngIf="formAddRecipe.controls.time.touched && formAddRecipe.controls.time.errors?.required">
                   This field can't be empty!</small>
+                  <small class="text-danger"  *ngIf="formAddRecipe.controls.time.touched && formAddRecipe.controls.time.errors?.pattern">
+                    Time must be positive integer value!</small>
               </div>
             </div>
             <div class="form-group row d-flex">
@@ -67,7 +71,11 @@
               <div class="col-md-3"></div>
               <div class="col-md-9">
                   <ul *ngFor="let ingr of ingredients">
-                      <li>{{ingr}}</li>
+                    <li>{{ingr | titlecase}} 
+                      <button class="btn btn-danger btn-sm" style="border-radius: 50%" (click)="removeIngredient(ingr)">
+                         <i class="fa fa-times" style="position: relative;" aria-hidden="true"></i>
+                      </button>
+                   </li>
                   </ul>
               </div>
             </div>
@@ -86,7 +94,11 @@
               <div class="col-md-3"></div>
                 <div class="col-md-9">
                   <ul *ngFor="let step of steps">
-                      <li>{{step}}</li>
+                    <li>{{step | titlecase}} 
+                      <button class="btn btn-danger btn-sm" style="border-radius: 50%" (click)="removeStep(step)">
+                         <i class="fa fa-times" style="position: relative;" aria-hidden="true"></i>
+                      </button>
+                   </li>
                   </ul>
               </div>
             </div>
