--- a/frontend/src/app/components/recipes/search-recipe/search-recipe.component.html
+++ b/frontend/src/app/components/recipes/search-recipe/search-recipe.component.html
@@ -8,18 +8,18 @@
             <div class="form-group row">
                 <label for="price" class="control-label col-md-3"><b>Max budget:</b></label>
                 <div class="col-md-9">
-                  <input type="number" class="form-control" id="price" name="price" placeholder="Price" formControlName="price">
-                  <small class="text-danger"  *ngIf="formSearchRecipes.controls.price.touched && formSearchRecipes.controls.price.errors?.required">
-                    This field can't be empty!</small>
+                  <input type="number" min="0" class="form-control" id="price" name="price" placeholder="Price" formControlName="price">
+                  <small class="text-danger"  *ngIf="formSearchRecipes.controls.price.touched && formSearchRecipes.controls.price.errors?.min">
+                    Budget must be positive!</small>
                 </div>
               </div>
 
             <div class="form-group row">
               <label for="userId" class="control-label col-md-3"><b>Max time:</b></label>
               <div class="col-md-9">
-                <input type="number" class="form-control" id="time" name="time" placeholder="Preparation time" formControlName="time">
-                <small class="text-danger"  *ngIf="formSearchRecipes.controls.time.touched && formSearchRecipes.controls.time.errors?.required">
-                  This field can't be empty!</small>
+                <input type="number" min="0" step="1" class="form-control" id="time" name="time" placeholder="Preparation time in minutes" formControlName="time">
+                <small class="text-danger"  *ngIf="formSearchRecipes.controls.time.touched && formSearchRecipes.controls.time.errors?.pattern">
+                  Time must be positive integer value!</small>
               </div>
             </div>
             <div class="form-group row d-flex">
@@ -37,7 +37,11 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-9">
                     <ul *ngFor="let ingr of ingredients">
-                        <li>{{ingr}}</li>
+                        <li>{{ingr | titlecase}} 
+                           <button class="btn btn-danger btn-sm" style="border-radius: 50%" (click)="removeIngredient(ingr)">
+                              <i class="fa fa-times" style="position: relative;" aria-hidden="true"></i>
+                           </button>
+                        </li>
                     </ul>
                 </div>
               </div>
