--- a/frontend/src/app/components/recipes/main-recipes/main-recipes.component.html
+++ b/frontend/src/app/components/recipes/main-recipes/main-recipes.component.html
@@ -1,11 +1,11 @@
 <div class="containter-fluid">
     <div class="row">
         <div class="col-sm-4 col-lg-3" *ngFor="let bestRecipe of bestRecipes">
-            <div class="card">
+            <div class="card" style="height:95%; width: 100%;">
                 <div class="card-body" style="border-color: gold; border-width: 2%; border-style: solid; border-radius: 15px;">
                     <div>
                         <img style='border-radius: 5px;' [src]="bestRecipe.imgURL">
-                        <p><strong>Name:</strong> {{bestRecipe?.name}}</p>
+                        <p><strong>Name:</strong> {{bestRecipe?.name | titlecase }}</p>
                         <p><b>Price:</b> {{bestRecipe?.price}} </p>
                         <p><b>Time:</b> {{bestRecipe?.time}} </p>
                         <p><b>Type:</b> {{bestRecipe?.type}} </p>
@@ -21,11 +21,11 @@
             </div>
         </div>
         <div class="col-sm-4 col-lg-3" *ngFor="let recipe of recipes">
-            <div class="card">
+            <div class="card" style="height:95%; width: 100%;">
                 <div class="card-body">
                     <div>
-                        <img style='border-radius: 5px;' [src]="recipe.imgURL">
-                        <p><strong>Name:</strong> {{recipe?.name}}</p>
+                        <img style='border-radius: 5px;' [src]="recipe.imgURL" style="height: 25vh; display: block ;margin: 0 auto;">
+                        <p><strong>Name:</strong> {{recipe?.name | titlecase}}</p>
                         <p><b>Price:</b> {{recipe?.price}} </p>
                         <p><b>Time:</b> {{recipe?.time}} </p>
                         <p><b>Type:</b> {{recipe?.type}} </p>
@@ -40,8 +40,28 @@
                 </div>
             </div>
         </div>
+        <div class="col-sm-4 col-lg-3" *ngFor="let recipe of notForPreparation" style="opacity: 0.5;">
+            <div class="card" style="height:95%; width: 100%;">
+                <div class="card-body">
+                    <div>
+                        <img style='border-radius: 5px;' [src]="recipe.imgURL" style="height: 25vh; display: block ;margin: 0 auto;">
+                        <p><strong>Name:</strong> {{recipe?.name | titlecase}}</p>
+                        <p><b>Price:</b> {{recipe?.price}} </p>
+                        <p><b>Time:</b> {{recipe?.time}} </p>
+                        <p><b>Type:</b> {{recipe?.type}} </p>
+                        <p><b>Complexity:</b> {{recipe?.complexity}} </p>
+                    </div>
+                    <div style="text-align: center;">
+                        <button class="btn btn-round"
+                            title="Locked" [disabled] = "true">
+                                Locked
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div *ngIf="countRecipes == 0 && countBestRecipes==0" style="text-align: center;">
+    <div *ngIf="countRecipes == 0 && countBestRecipes==0 && countNotForPrep == 0" style="text-align: center;">
         <h4 class="empty-list" >There are no recipes found.</h4>
     </div>
 </div>
