backward chaining implemented

--- a/frontend/src/app/components/recipes/main-recipes/main-recipes.component.html
+++ b/frontend/src/app/components/recipes/main-recipes/main-recipes.component.html
@@ -4,7 +4,7 @@
             <div class="card" style="height:95%; width: 100%;">
                 <div class="card-body" style="border-color: gold; border-width: 2%; border-style: solid; border-radius: 15px;">
                     <div>
-                        <img style='border-radius: 5px;' [src]="bestRecipe.imgURL">
+                        <img style='border-radius: 5px;' [src]="bestRecipe.imgURL" style="height: 25vh; display: block ;margin: 0 auto;">
                         <p><strong>Name:</strong> {{bestRecipe?.name | titlecase }}</p>
                         <p><b>Price:</b> {{bestRecipe?.price}} </p>
                         <p><b>Time:</b> {{bestRecipe?.time}} </p>
