--- a/frontend/src/app/components/reports/reports-recipe/reports-recipe.component.html
+++ b/frontend/src/app/components/reports/reports-recipe/reports-recipe.component.html
@@ -21,4 +21,7 @@
             </div>
         </div>
     </div>
+    <div *ngIf="countRecipes == 0" style="text-align: center;">
+        <h4 class="empty-list" >There are no recipes found.</h4>
+    </div>
 </div>
