--- a/frontend/src/app/components/reports/reports-user/reports-user.component.html
+++ b/frontend/src/app/components/reports/reports-user/reports-user.component.html
@@ -19,4 +19,7 @@
             </div>
         </div>
     </div>
+    <div *ngIf="countUsers == 0" style="text-align: center;">
+        <h4 class="empty-list" >There are no users found.</h4>
+    </div>
 </div>
